[package]
name = "sample"
version = "0.1.0"
authors = ["enjie <chenenjie911@163.com>"]

[dependencies]
lazy_static = "0.2.2"
bitflags = "0.7.0"
byteorder = "1.0.0"
chrono = "0.2.25"
clap = "2.20.1"
error-chain = "0.8.1"
json = "0.11.5"
libc = "0.2.20"
log = "0.3.6"
ndarray = "0.7.3"
num = "0.1.36"
rand = "0.3.15"
rayon = "0.6.0"
regex = "0.2.1"
reqwest = "0.3.0"
serde = "0.9.5"
tempdir = "0.3.5"
toml = "0.2.1"
url = "1.4.0"
env_logger = "*"
serde_derive = "0.9"
serde_json = "0.9"
num_cpus = "*"
threadpool = "*"
